--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,18 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=mydrugs
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=mydrugs
+DB_USERNAME=root
+DB_PASSWORD=
+
+DB_INSERTER_HOST=127.0.0.1
+DB_INSERTER_PORT=3306
+DB_INSERTER_DATABASE=mydrugs
+DB_INSERTER_USERNAME=creador_registros
+DB_INSERTER_PASSWORD=creadorPass
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
