feat: conexiones a nuevos usuario

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,12 @@ DB_INSERTER_DATABASE=mydrugs
 DB_INSERTER_USERNAME=creador_registros
 DB_INSERTER_PASSWORD=creadorPass
 
+DB_EDITOR_HOST=127.0.0.1 
+DB_EDITOR_PORT=3306     
+DB_EDITOR_DATABASE=mydrugs 
+DB_EDITOR_USERNAME=editor_registros
+DB_EDITOR_PASSWORD=editorPass
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
