feat: usuarios pa recursos faltantes

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,24 @@ DB_EDITOR_DATABASE=mydrugs
 DB_EDITOR_USERNAME=editor_registros
 DB_EDITOR_PASSWORD=editorPass
 
+DB_ADMIN_HOST=127.0.0.1
+DB_ADMIN_PORT=3306
+DB_ADMIN_DATABASE=mydrugs
+DB_ADMIN_USERNAME=admin_mydrugs
+DB_ADMIN_PASSWORD=adminMydrugsPass!
+
+DB_PERM_MANAGER_HOST=127.0.0.1
+DB_PERM_MANAGER_PORT=3306
+DB_PERM_MANAGER_DATABASE=mydrugs
+DB_PERM_MANAGER_USERNAME=perm_manager
+DB_PERM_MANAGER_PASSWORD=permManagerPass!
+
+DB_SCHEMA_CREATOR_HOST=127.0.0.1
+DB_SCHEMA_CREATOR_PORT=3306
+DB_SCHEMA_CREATOR_DATABASE=mydrugs
+DB_SCHEMA_CREATOR_USERNAME=schema_creator
+DB_SCHEMA_CREATOR_PASSWORD=schemaCreatorPass!
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
